2004-05-04  Pawel Rozanski  <tokugawa@afn.no-ip.org>

	* build/AddIns/AddIns/BackendBindings/BackendBindings.addin.xml:
	* build/data/templates/file/Nemerle/EmptyNemerleFile.xft:
	* build/data/templates/project/Nemerle/EmptyProject.xpt:
	Nemerle projects use Nemerle icons now

	* build/data/resources/icons/Makefile.am:
	* build/data/resources/icons/Nemerle.ProjectIcon:
	* build/data/resources/icons/Nemerle.Project.EmptyProject:
	* build/data/resources/icons/Nemerle.File.EmptyFile:
	* build/data/resources/icons/Nemerle.FileIcon:
	first Nemerle icons from Piotr Modrzyk

2004-05-02  Todd Berman  <tberman@sevenl.net>

	* build/AddIns/Makefile.am:
	* po/*: updates to get a make distcheck to pass.

2004-04-27  Francisco "Paco" Martinez <paco@mfcon.com>

	* configure.in: output src/Addin/prj2make-sharp-lib/Makefile and
		src/Addin/prj2make-sharp-lib/AssemblyInfo.cs
	* src/Addin/Makefile.am: add prj2make-sharp-lib to subdirs
	* src/Addin/prj2make-sharp-lib -- This is an addin to 
		manipulate project and workspace file types created by
		MS Visual Studio .NET 2003

2004-04-27  Todd Berman  <tberman@sevenl.net>

	* configure.in: bump gtksourceview-sharp dep.

2004-04-26  Pawel Rozanski  <tokugawa@afn.no-ip.org>

	* monodevelop.xml: mime for Nemerle source
	* monodevelop.keys: added text/x-java,text/x-msil,
	text/x-nemerle,text/x-vb 
	* monodevelop.applications: as above
	* monodevelop.mime: changed to x-prjx, x-cmbx 

2004-04-25  John Luke  <jluke@cfl.rr.com>

	* AUTHORS: add people that have contributed

2004-04-25  Atsushi Enomoto  <atsushi@ximian.com>

	* configure.in: ja_JP.po support.

2004-04-19  Todd Berman  <tberman@sevenl.net>

	* configure.in: bump the monodoc dep to 0.13.99

2004-04-19  Todd Berman  <tberman@sevenl.net>

	* configure.in: add french translation
	* po/fr.po: add french translation from Vincent Daron

2004-04-12  John Luke  <jluke@cfl.rr.com>

	import ILAsmBinding from SD svn	

	* configure.in: make hard dependencies in one check