@@ -27,46 +27,34 @@ if test "x$PKG_CONFIG" = "xno"; then
         AC_MSG_ERROR([You need to install pkg-config])
 fi
 
-dnl hard dependencies
-MONO_REQUIRED_VERSION=0.90
-GTKSHARP_REQUIRED_VERSION=0.91
+dnl unmanaged hard dependencies
+MONO_REQUIRED_VERSION=0.91
 GTKSOURCEVIEW_REQUIRED_VERSION=0.7
+GNOMEVFS_REQUIRED_VERSION=2.0
+PKG_CHECK_MODULES(UNMANAGED_DEPENDENCIES,
+mono >= $MONO_REQUIRED_VERSION
+gtksourceview-1.0 >= $GTKSOURCEVIEW_REQUIRED_VERSION
+gnome-vfs-2.0 >= $GNOMEVFS_REQUIRED_VERSION
+)
+
+dnl hard dependencies
+GTKSHARP_REQUIRED_VERSION=0.91.1
 GTKSOURCEVIEWSHARP_REQUIRED_VERSION=0.2
 GECKOSHARP_REQUIRED_VERSION=0.2
-GNOMEVFS_REQUIRED_VERSION=2.0
 MONODOC_REQUIRED_VERSION=0.14
 
 PKG_CHECK_MODULES(BASE_DEPENDENCIES,
-mono >= $MONO_REQUIRED_VERSION
 gtk-sharp >= $GTKSHARP_REQUIRED_VERSION
 glade-sharp >= $GTKSHARP_REQUIRED_VERSION
 gconf-sharp >= $GTKSHARP_REQUIRED_VERSION
 gnome-sharp >= $GTKSHARP_REQUIRED_VERSION
 gtkhtml-sharp >= $GTKSHARP_REQUIRED_VERSION
-gtksourceview-1.0 >= $GTKSOURCEVIEW_REQUIRED_VERSION
 gtksourceview-sharp >= $GTKSOURCEVIEWSHARP_REQUIRED_VERSION
 gecko-sharp >= $GECKOSHARP_REQUIRED_VERSION
-gnome-vfs-2.0 >= $GNOMEVFS_REQUIRED_VERSION
 monodoc >= $MONODOC_REQUIRED_VERSION)
 
 gtksharp_prefix=`pkg-config --variable=prefix gtk-sharp`
 AC_SUBST(gtksharp_prefix)
-GTKSOURCEVIEW_SHARP="`pkg-config --libs gtksourceview-sharp`"
-AC_SUBST(GTKSOURCEVIEW_SHARP)
-GECKO_SHARP="`pkg-config --libs gecko-sharp`"
-AC_SUBST(GECKO_SHARP)
-MONODOC="`pkg-config --libs monodoc`"
-AC_SUBST(MONODOC)
-GTKSHARP="`pkg-config --libs gtk-sharp`"
-AC_SUBST(GTKSHARP)
-GLADESHARP="`pkg-config --libs glade-sharp`"
-AC_SUBST(GLADESHARP)
-GNOMESHARP="`pkg-config --libs gnome-sharp`"
-AC_SUBST(GNOMESHARP)
-GCONFSHARP="`pkg-config --libs gconf-sharp`"
-AC_SUBST(GCONFSHARP)
-GTKHTMLSHARP="`pkg-config --libs gtkhtml-sharp`"
-AC_SUBST(GTKHTMLSHARP)
 
 dnl GdlDock requirements and configuration
 GTK_REQUIRED=2.2.0
