@@ -7,9 +7,7 @@ DLLS = /r:System.Drawing.dll \
 	/r:../../../../build/bin/MonoDevelop.Base.dll \
 	/r:../../../../build/bin/ICSharpCode.SharpRefactory.dll \
 	/r:../../../../build/bin/MonoDevelop.Gui.Widgets.dll  \
-	@GTKSHARP@ \
-	@GLADESHARP@ \
-	$(GTKSOURCEVIEW_SHARP) 
+	$(BASE_DEPENDENCIES_LIBS)
 
 FILES = \
 ./Gui/ChooseRuntimePanel.cs \
