@@ -8,14 +8,15 @@ build_sources = $(addprefix $(srcdir)/, $(FILES))
 
 DLL = MonoDevelop.StartPage.dll
 
+REFS = /r:System.Drawing \
+	/r:../../../../build/bin/MonoDevelop.Core.dll \
+	/r:../../../../build/bin/MonoDevelop.Base.dll \
+	$(BASE_DEPENDENCIES_LIBS)
+
 all: $(DLL)
 
 $(DLL): $(build_sources)
-	mcs /debug /out:$(DLL) /target:library /r:System.Drawing \
-		/r:../../../../build/bin/MonoDevelop.Core.dll \
-		/r:../../../../build/bin/MonoDevelop.Base.dll \
-		@GECKO_SHARP@ \
-		@GTKSHARP@ \
+	mcs /debug /out:$(DLL) /target:library $(REFS) \
 		$(build_sources) \
 	&& cp $(DLL) ../../../../build/AddIns/AddIns/Misc/StartPage/.
 
