@@ -1,3 +1,12 @@
+2004-05-06  John Luke  <jluke@cfl.rr.com>
+
+	* configure.in: split unmanaged stuff into there own check
+	so $(BASE_DEPENDENCIES_LIBS) is useful for us, remove the 
+	individual AC_SUBST's
+	* *Makefile.am: use BASE_DEPENDENCIES_LIBS instead of specifying
+	all the refs individually and split the references into a seperate
+	variable in those that weren't already
+
 2004-05-04  Pawel Rozanski  <tokugawa@afn.no-ip.org>
 
 	* build/AddIns/AddIns/BackendBindings/BackendBindings.addin.xml:
